# Greening-India-Assingment

./: .env.example  .gitignore  CURL.md  Makefile  NOTES.md  PROJECT.md  README.md  SUBMISSION_CHECKLIST.md  VERIFICATION_REPORT.md  docker-compose.yml  netlify.toml  taskflow.postman_collection.json
Backend/: .env.example  Dockerfile  go.mod  go.sum
Frontend/: Dockerfile  index.html  package-lock.json  (+1 more)
ZomatoGreen/: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
ZomatoGreen/frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
ZomatoGreen/frontend/src/: App.tsx  index.css  main.tsx
ZomatoGreen/frontend/src/api/: auth.ts  client.ts  projects.ts
ZomatoGreen/frontend/src/components/: ProtectedRoute.tsx  Sidebar.tsx
ZomatoGreen/frontend/src/pages/: MyTasksPage.tsx
ZomatoGreen/frontend/src/pages/auth/: AuthPage.tsx  LoginPage.tsx  RegisterPage.tsx
ZomatoGreen/frontend/src/pages/projects/: ProjectDetailPage.tsx  ProjectsPage.tsx
ZomatoGreen/frontend/src/store/: auth.ts
ZomatoGreen/frontend/src/types/: index.ts
ZomatoGreen/migrations/: 000001_users.up.sql  000002_management.down.sql  000002_management.up.sql  000003_geospatial.down.sql  000003_geospatial.up.sql  000004_carbon.down.sql  000004_carbon.up.sql  000005_project_type.down.sql  000005_project_type.up.sql  000006_task_creator.down.sql  000006_task_creator.up.sql  seed.sql
ZomatoGreen/services/carbon/: Cargo.toml  Dockerfile  Dockerfile.rust
ZomatoGreen/services/carbon/src/: db.rs  domain.rs  errors.rs  handlers.rs  hashing.rs  kafka_consumer.rs  main.rs  middleware.rs
ZomatoGreen/services/gateway/: Cargo.toml  Dockerfile  Dockerfile.rust
ZomatoGreen/services/gateway/src/: auth.rs  domain.rs  errors.rs  handlers.rs  main.rs  middleware.rs  proxy.rs  state.rs
ZomatoGreen/services/geospatial/: Cargo.toml  Dockerfile  Dockerfile.rust
ZomatoGreen/services/geospatial/src/: db.rs  domain.rs  errors.rs  handlers.rs  main.rs  middleware.rs
ZomatoGreen/services/management/: Cargo.toml  Dockerfile  Dockerfile.rust
ZomatoGreen/services/management/src/: db.rs  domain.rs  errors.rs  handlers.rs  main.rs  middleware.rs
ZomatoGreen/services/telemetry/: Cargo.toml  Dockerfile  Dockerfile.rust
ZomatoGreen/services/telemetry/src/: db.rs  domain.rs  errors.rs  handlers.rs  kafka.rs  main.rs  middleware.rs  redis_store.rs  state.rs
(+492 files in other folders)
