[workspace]
members = [
    "services/gateway",
    "services/management",
    "services/geospatial",
    "services/telemetry",
    "services/carbon",
]
resolver = "2"

[workspace.dependencies]
axum        = { version = "0.7", features = ["macros"] }
tokio       = { version = "1",   features = ["full"] }
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
sqlx        = { version = "0.8", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls", "migrate", "macros"] }
uuid        = { version = "1",   features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
anyhow      = "1"
thiserror   = "1"
tower-http  = { version = "0.5", features = ["cors", "trace"] }
tower       = "0.4"
dotenvy     = "0.15"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest     = { version = "0.12", features = ["json", "stream"] }
