[package]
name    = "carbon"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace              = true
tokio.workspace             = true
serde.workspace             = true
serde_json.workspace        = true
sqlx.workspace              = true
uuid.workspace              = true
chrono.workspace            = true
anyhow.workspace            = true
thiserror.workspace         = true
tower-http.workspace        = true
dotenvy.workspace           = true
tracing.workspace           = true
tracing-subscriber.workspace = true
rdkafka = { version = "0.36", features = ["cmake-build"] }
sha2 = "0.10"
hex  = "0.4"
