[package]
name    = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace              = true
tokio.workspace             = true
serde.workspace             = true
serde_json.workspace        = true
sqlx.workspace              = true
uuid.workspace              = true
chrono.workspace            = true
anyhow.workspace            = true
thiserror.workspace         = true
tower-http.workspace        = true
tower.workspace             = true
dotenvy.workspace           = true
tracing.workspace           = true
tracing-subscriber.workspace = true
reqwest.workspace           = true
jsonwebtoken = "9"
bcrypt = "0.15"
